--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
     </ul>
     </div>
 </div>
+<div class="music round" >
+    <div class="circle">
+        <i class="fa fa-music fa-5x" aria-hidden="true"></i>
+    </div>
+    <audio autoplay loop>
+        <source src="music.mp3">
+    </audio>
+</div>
 <div class="phone">
     <div class="iPhone"><div class="phoneFrame-top"></div>
         <div class="phoneFrame-bottom"></div>
